# Scraping

./: app_mongoengine.py  connection.py  main.py  models.py  pyproject.toml  quotes.json
